[gd_scene load_steps=6 format=2]

[ext_resource path="res://WinScreen.gd" type="Script" id=1]
[ext_resource path="res://winScreenTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Audio/victory.mp3" type="AudioStream" id=3]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("You Won:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DiamondsCollected:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PressToRetry:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "SetRetryInputDisabled"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TimeTaken:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=1]
resource_name = "win"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("You Won:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DiamondsCollected:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.6 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PressToRetry:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.4 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "SetRetryInputEnabled"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("TimeTaken:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="WinScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/win = SubResource( 1 )

[node name="You Won" type="Label" parent="."]
visible = false
margin_left = 35.0
margin_top = 36.0
margin_right = 145.0
margin_bottom = 66.0
theme = ExtResource( 2 )
text = "You Beat the Heat!"

[node name="DiamondsCollected" type="Label" parent="."]
visible = false
margin_left = 35.0
margin_top = 138.0
margin_right = 320.0
margin_bottom = 168.0
theme = ExtResource( 2 )
text = "Collected Diamonds -0"

[node name="TimeTaken" type="Label" parent="."]
visible = false
margin_left = 35.0
margin_top = 100.0
margin_right = 179.0
margin_bottom = 130.0
theme = ExtResource( 2 )
text = "Time - 0:00"

[node name="PressToRetry" type="Label" parent="."]
visible = false
margin_left = 35.0
margin_top = 207.0
margin_right = 343.0
margin_bottom = 237.0
theme = ExtResource( 2 )
text = "Press Jump To Retry"

[node name="VictorySFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
